--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,44 @@
-<!DOCTYPE html>
-<html>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
-    <title></title>
+    <title>FVPresta - Make your idea come true</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Language" content="fr"/>
+    <meta name="author" content="Trong Hieu HA (tronghieu.ha@gmail.com), Nicolas Julhes (njulhes@gmail.com)"/>
+    <meta name="owner" content="http://fvpresta.fr/"/>
+    <meta name="robots" content="index, follow, all"/>
+    <meta name="revisit-after" content="2days"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="-1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="/static/img/icon.jpg"/>
+    <link rel="stylesheet" href="{{ STATIC_URL }}common/css/bootstrap-responsive.css" type="text/css" />
+
+    <!-- More styles -->
+    {% block additional-styles %}{% endblock %}
+    <!-- /More styles -->
 </head>
 <body>
-<div>test<</div>
+    {% block content %}{% endblock %}
+
+    <!-- JS -->
+    <script type="text/javascript" src="{{ STATIC_URL }}common/js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}common/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}common/js/less-1.3.1.js"></script>
+
+    <!-- More scripts -->
+    {% block additional-scripts %}{% endblock %}
+    <!-- /More scripts -->
+
+    <script type='text/javascript'>
+        $(function() {
+
+        });
+    </script>
+    <!-- /JS -->
 </body>
 </html>
