Begin to integrate HTML

--- a/static/cms/css/cms.less
+++ b/static/cms/css/cms.less
@@ -6,3 +6,31 @@ body {
   background-image: url('@{static_url}/cms/img/bg.png');
   color: #dddddd;
 }
+
+#logo {
+  font-size: 1.6em;
+}
+
+#left_menu {
+  list-style: none;
+  li {
+    a {
+      padding: 0.5em 1em;
+      color: #FFFFFF;
+      text-decoration: none;
+      border-bottom: 1px dashed #555555;
+      &:hover {
+        background-color: #222222;
+      }
+    }
+  }
+}
+
+#clients {
+  .thumbnail {
+    background-color: #FFFFFF;
+  }
+  .row {
+    margin-bottom: 3em;
+  }
+}
