--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Expires" content="-1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="{{ STATIC_URL }}common/css/bootstrap-responsive.css" type="text/css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}common/css/bootstrap.css" type="text/css" />
 
     <!-- More styles -->
     {% block additional-styles %}{% endblock %}
