--- a/templates/cms/_left_menu.html
+++ b/templates/cms/_left_menu.html
@@ -1,4 +1,7 @@
 <ul id="left_menu" class="nav nav-list">
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="{% url cms_home %}">Home</a></li>
+    <li><a href="{% url cms_about_us %}">About us</a></li>
+    <li><a href="{% url cms_portfolio %}">Portfolio</a></li>
+    <li><a href="{% url cms_clients %}">Clients</a></li>
+    <li><a href="{% url cms_contact %}">Contacts</a></li>
 </ul>
