--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block content %}
-<div class="container">
+<div id="cms_base" class="container">
     <div class="row">
         <div class="span2">
             <h1 id="logo">FVPRESTA</h1>
