--- a/templates/cms/default/home.html
+++ b/templates/cms/default/home.html
@@ -1,20 +1,21 @@
 {% extends 'cms/cms_base.html' %}
 
+{% load thumbnail %}
+
 {% block right-content %}
-<div id="myCarousel" class="carousel slide">
+<div id="carousel" class="carousel slide">
     <!-- Carousel items -->
     <div class="carousel-inner">
-        <div class="active item">
-            <img src="{{ STATIC_URL }}cms/img/home1.jpg" alt="">
-        </div>
-        <div class="item">
-            <img src="{{ STATIC_URL }}cms/img/home2.jpg" alt="">
-        </div>
+        {% for carousel in carousels %}
+            <div class="item {% if forloop.first %}active{% endif %}">
+                <img src="{{ carousel.image|thumbnail_url:'carousel_big' }}" alt="">
+            </div>
+        {% endfor %}
     </div>
     <!-- /Carousel items -->
     <!-- Carousel nav -->
-    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
     <!-- /Carousel nav -->
 </div>
 
