+ Change from fake (multi) clients to the real ones

--- a/templates/cms/default/clients.html
+++ b/templates/cms/default/clients.html
@@ -5,48 +5,11 @@
 {% block right-content %}
 <div id="clients">
     {% for client in clients %}
-        <div class="row thumbnails">
+        {% if forloop.counter0|divisibleby:"4" %}<div class="row thumbnails">{% endif %}
             <div class="span2 thumbnail">
                 <img src="{{ client.logo|thumbnail_url:'logo_big' }}" title="{{ client.name }}" alt="{{ client.name }}" />
             </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-        </div>
-        <div class="row thumbnails">
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo|thumbnail_url:'logo_big' }}" title="{{ client.name }}" alt="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-        </div>
-        <div class="row thumbnails">
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo|thumbnail_url:'logo_big' }}" title="{{ client.name }}" alt="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-            <div class="span2 thumbnail">
-                <img src="{{ client.logo.url }}" title="{{ client.name }}" />
-            </div>
-        </div>
+        {% if forloop.last or forloop.counter|divisibleby:"4" %}</div>{% endif %}
     {% endfor %}
 </div>
 {% endblock %}
