--- a/templates/cms/default/clients.html
+++ b/templates/cms/default/clients.html
@@ -1,12 +1,19 @@
 {% extends 'cms/cms_base.html' %}
 
+{% block current-page-scripts %}
+    <!-- Scrtips for current page -->
+    <script type="text/javascript" src="{{ STATIC_URL }}common/js/jquery.flippy.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}cms/js/clients.js"></script>
+    <!-- /Scrtips for current page -->
+{% endblock %}
+
 {% load thumbnail %}
 
 {% block right-content %}
 <div id="clients">
     {% for client in clients %}
-        {% if forloop.counter0|divisibleby:"4" %}<div class="row thumbnails">{% endif %}
-            <div class="span2 thumbnail">
+        {% if forloop.counter0|divisibleby:"3" %}<div class="row thumbnails">{% endif %}
+            <div class="span3 thumbnail client-logo">
                 <img src="{{ client.logo|thumbnail_url:'logo_big' }}" title="{{ client.name }}" alt="{{ client.name }}" />
             </div>
         {% if forloop.last or forloop.counter|divisibleby:"4" %}</div>{% endif %}
