--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
 
     <!-- Global JS -->
     <script type="text/javascript" src="{{ STATIC_URL }}common/js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}common/js/fvpresta.plugin.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}common/js/bootstrap.min.js"></script>
     <!-- /Global JS -->
 
